[package]
name = "energiatili-config"
version = "0.1.0"
authors = ["Ossi Herrala <oherrala@iki.fi>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4"
serde = { version = "1", features = [ "derive" ] }
toml = "0.5"
