[package]
name = "energiatili-import"
version = "0.1.0"
authors = ["Ossi Herrala <oherrala@iki.fi>"]
license = "MIT"
edition = "2018"

[dependencies]
energiatili-config = { path = "../energiatili-config" }
energiatili-model = { path = "../energiatili-model" }
env_logger = "0.7"
log = "0.4"
reqwest = { version = "0.10", features = [ "cookies" ] }
serde_json = "1"
tokio = { version = "0.2", features = ["macros"] }
