[package]
name = "energiatili-import"
version = "0.1.0"
authors = ["Ossi Herrala <oherrala@iki.fi>"]
license = "MIT"
edition = "2021"

[dependencies]
energiatili-config = { path = "../energiatili-config" }
energiatili-model = { path = "../energiatili-model" }
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.11", features = [ "cookies" ] }
serde_json = "1"
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
