[package]
name = "energiatili-model"
version = "0.1.0"
authors = ["Ossi Herrala <oherrala@iki.fi>"]
license = "MIT"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.5", features = ["serde"] }
num-traits = "0.2"
rayon = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
