[package]
name = "influxdb-export"
version = "0.1.0"
authors = ["Ossi Herrala <oherrala@iki.fi>"]
license = "MIT"
edition = "2018"

[dependencies]
energiatili-config = { path = "../energiatili-config" }
energiatili-model = { path = "../energiatili-model" }
env_logger = "0.7"
influxdb = "0.0.5"
tokio = "1.8"
