[package]
name = "influxdb-export"
version = "0.1.0"
authors = ["Ossi Herrala <oherrala@iki.fi>"]
license = "MIT"
edition = "2021"

[dependencies]
energiatili-config = { path = "../energiatili-config" }
energiatili-model = { path = "../energiatili-model" }
env_logger = "0.9"
futures = "0.3"
influxdb2_client = { git = "https://github.com/influxdata/influxdb_iox", rev = "bf39649d64e2890e2ae9e5a4e245c67624d2df43" }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
